--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation 'androidx.appcompat:appcompat:1.7.1'
+	implementation 'androidx.core:core-splashscreen:1.0.1'
 	implementation 'com.google.android.material:material:1.12.0'
 	implementation platform('com.google.firebase:firebase-bom:34.1.0')
 	implementation 'com.google.firebase:firebase-database'
