--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,27 @@
-plugins {
-	id 'com.android.application' version '8.0.0'
-}
+apply plugin: 'com.android.application'
 
 android {
     compileSdk 34
-    namespace "com.QuickNotes.Dev" // namespace genellikle burada veya defaultConfig içinde olur
+    namespace "com.QuickNotes.Dev"
 
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.QuickNotes.Dev"
         minSdkVersion 23
-        targetSdkVersion 35
+        targetSdkVersion 34 // 35 yerine şimdilik 34 yapalım, uyum sorunu çıkmasın
         versionCode 4
         versionName "0.4"
 
-        // --- AdMob ID Okuma Bölümü ---
-        Properties properties = new Properties()
-        def propertiesFile = project.rootProject.file('local.properties')
-        
-        if (propertiesFile.exists()) {
-            properties.load(propertiesFile.newDataInputStream())
+        // local.properties'den AdMob ID'yi çek
+        def localProperties = new Properties()
+        def localPropertiesFile = project.rootProject.file('local.properties')
+        if (localPropertiesFile.exists()) {
+            localProperties.load(localPropertiesFile.newDataInputStream())
         }
-
-        // Eğer local.properties'de ADMOB_APP_ID yoksa hata vermemesi için varsayılan boş değer atayalım
-        def appId = properties.getProperty("ADMOB_APP_ID") ?: ""
         
+        def appId = localProperties.getProperty("ADMOB_APP_ID") ?: ""
         manifestPlaceholders = [adMobAppId: appId]
-        // -----------------------------
     }
 
     buildTypes {
@@ -36,18 +30,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    
+    // Gradle 8+ sürümü için bazı eski Sketchware kodlarını tolere etmesini sağlar
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
-
 dependencies {
-	implementation fileTree(dir: 'libs', include: ['*.jar'])
-	implementation 'androidx.appcompat:appcompat:1.7.1'
-	implementation 'androidx.core:core-splashscreen:1.0.1'
-	implementation 'com.google.android.material:material:1.12.0'
-	implementation platform('com.google.firebase:firebase-bom:34.1.0')
-	implementation 'com.google.firebase:firebase-database'
-	implementation 'com.google.android.gms:play-services-ads:23.4.0'
-	implementation 'com.google.android.gms:play-services-maps:17.0.1'
-	implementation 'com.google.code.gson:gson:2.11.0'
-	implementation 'com.airbnb.android:lottie:6.5.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.6.1' // Daha stabil bir sürüm
+    implementation 'androidx.core:core-splashscreen:1.0.1'
+    implementation 'com.google.android.material:material:1.9.0' // Gradle 8.0 ile daha uyumlu
+    implementation platform('com.google.firebase:firebase-bom:33.1.0')
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.gms:play-services-ads:23.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.airbnb.android:lottie:6.0.0'
 }
